--- a/src/styles/Days.module.scss
+++ b/src/styles/Days.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   align-content: center;
+  position: absolute;
+  top: 80px;
   p {
     text-transform: uppercase;
     font-family: "aquatico";
